--- a/logstash_plugins/http.conf
+++ b/logstash_plugins/http.conf
@@ -12,12 +12,22 @@ filter {
 }
 
 output {
-  elasticsearch {
-    hosts => ["http://elasticsearch:9200"]
-    index => "%{[app_name]}-%{+YYYY.MM}"
-    # index => "test"
-    ilm_enabled => "false"
-    ssl => false
-    ssl_certificate_verification => false
+  # elasticsearch {
+  #   hosts => ["http://elasticsearch:9200"]
+  #   index => "%{[app_name]}-%{+YYYY.MM}"
+  #   # index => "test"
+  #   ilm_enabled => "false"
+  #   ssl => false
+  #   ssl_certificate_verification => false
+  # }
+  if "development" not in [app_name] {
+     elasticsearch {
+        hosts => ["http://elasticsearch:9200"]
+        index => "%{[app_name]}-%{+YYYY.MM}"
+        # index => "test"
+        ilm_enabled => "false"
+        ssl => false
+        ssl_certificate_verification => false
+      }
   }
 }
