--- a/logstash_plugins/http.conf
+++ b/logstash_plugins/http.conf
@@ -20,6 +20,7 @@ output {
   #   ssl => false
   #   ssl_certificate_verification => false
   # }
+  stdout {}
   if "development" not in [app_name] {
      elasticsearch {
         hosts => ["http://elasticsearch:9200"]
